# tracey

./: .gitignore  COMPLIANCE.md  Cargo.toml  Containerfile  README.md  SECURITY.md  WORKFLOW_ANALYSIS.md  build.rs
.github/wiki/: Home.md
.github/workflows/: build-and-release.yml  ci.yml  init-wiki.yml
docs/: CONFIGURATION_REFERENCE.md  OPERATIONS.md  TRACEYBAN_PRACTICAL_PARITY_CHECKLIST.md
examples/: traceyban-hardened-sshd-auto.json
loader/: tracey-loader.manifest.json
scripts/: derive-version.sh  install-service.sh  package-release.sh  preflight.sh
src/: aer.rs  assets.rs  auth.rs  autoscaler.rs  bus.rs  capabilities.rs  cli.rs  config.rs  continuum_assessment.rs  continuum_loop.rs  continuum_telemetry.rs  coordination.rs  dashboard.rs  discovery.rs  embedded.rs  event.rs  fail2ban.rs  governance.rs  gpu.rs  inventory.rs  lib.rs  loader.rs  loader_threat.rs  location.rs  main.rs  network_ebpf.rs  network_intel.rs  peer_compat.rs  probe_backoff.rs  probe_watch.rs  prometheus_export.rs  refiner_tracking.rs  resource_forecast.rs  security.rs  sensors.rs  shutdown.rs  slurm.rs  status.rs  stimuli.rs  storage.rs  (+7 more)
src/swarm/: agent.rs  coordinator.rs  learning.rs  mod.rs
