[package]
name = "tracey"
version = "0.2.2"
edition = "2024"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
thiserror = "1.0"
anyhow = "1.0"
blake3 = "1.5"
num_cpus = "1.16"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "blocking"] }
tonic = { version = "0.9", features = ["transport"] }
prost = "0.11"
opentelemetry-proto = { version = "0.4", features = ["gen-tonic", "metrics"] }
axum = "0.7"
bytes = "1.6"
jsonwebtoken = "9.3"
libc = "0.2"
libloading = "0.8"
regex = "1.11"
sysinfo = "0.38"
ratatui = "0.29"
crossterm = "0.28"

[dev-dependencies]
proptest = "1.9"
tower = { version = "0.5", features = ["util"] }
